--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_part_parent_operations_using_pc.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G2_composite_fk_parent_part_parent_operations_using_pc.yaml
@@ -43,20 +43,20 @@ microbenchmark:
             - DROP INDEX IF EXISTS fk_index1;
             - DROP INDEX IF EXISTS fk_index2;
 
-            - create table projects_with_part_with_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
+            - create table projects_with_part_with_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
             - CREATE TABLE projects_sales1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('Sales');
             - CREATE TABLE projects_eng1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('Engineering');
             - CREATE TABLE projects_hr1 PARTITION OF projects_with_part_with_fk FOR VALUES IN ('HR');
             - CREATE TABLE projects_default1 PARTITION OF projects_with_part_with_fk DEFAULT;
 
-            - create table projects_with_part_without_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
+            - create table projects_with_part_without_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept)) PARTITION BY LIST (dept);
             - CREATE TABLE projects_sales2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('Sales');
             - CREATE TABLE projects_eng2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('Engineering');
             - CREATE TABLE projects_hr2 PARTITION OF projects_with_part_without_fk FOR VALUES IN ('HR');
             - CREATE TABLE projects_default2 PARTITION OF projects_with_part_without_fk DEFAULT;
 
-            - create table projects_without_part_with_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
-            - create table projects_without_part_without_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
+            - create table projects_without_part_with_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
+            - create table projects_without_part_without_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, dept));
 
             - create table employees_with_part (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
             - create table employees_without_part (id int primary key, name varchar(50) not null, project_id int, project_dept varchar(15), hired_at date);
@@ -89,9 +89,6 @@ microbenchmark:
                   - name: id
                     util: PrimaryIntGen
                     params: [1, 100000]
-                  - name: uid
-                    util: PrimaryIntGen
-                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -106,9 +103,6 @@ microbenchmark:
               rows: 100000
               columns:
                   - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: name
@@ -127,9 +121,6 @@ microbenchmark:
                   - name: id
                     util: PrimaryIntGen
                     params: [1, 100000]
-                  - name: uid
-                    util: PrimaryIntGen
-                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -144,9 +135,6 @@ microbenchmark:
               rows: 100000
               columns:
                   - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: name
@@ -208,7 +196,7 @@ microbenchmark:
                   - name: update_with_part_with_fk
                     weight: 100
                     queries:
-                        - query: update projects_with_part_with_fk set uid=uid+1 where dept=?;
+                        - query: update projects_with_part_with_fk set id=id+100000 where dept=?;
                           bindings:
                             - util: OneStringFromArray
                               params: [['Sales','Engineering','HR','Anonymous']]
@@ -218,7 +206,7 @@ microbenchmark:
                   - name: update_with_part_without_fk
                     weight: 100
                     queries:
-                        - query: update projects_with_part_without_fk set uid=uid+1 where dept=?;
+                        - query: update projects_with_part_without_fk set id=id+100000 where dept=?;
                           bindings:
                             - util: OneStringFromArray
                               params: [['Sales','Engineering','HR','Anonymous']]
@@ -228,7 +216,7 @@ microbenchmark:
                   - name: update_without_part_with_fk
                     weight: 100
                     queries:
-                        - query: update projects_without_part_with_fk set uid=uid+1 where dept=?;
+                        - query: update projects_without_part_with_fk set id=id+100000 where dept=?;
                           bindings:
                             - util: OneStringFromArray
                               params: [['Sales','Engineering','HR','Anonymous']]
@@ -238,7 +226,7 @@ microbenchmark:
                   - name: update_without_part_without_fk
                     weight: 100
                     queries:
-                        - query: update projects_without_part_without_fk set uid=uid+1 where dept=?;
+                        - query: update projects_without_part_without_fk set id=id+100000 where dept=?;
                           bindings:
                             - util: OneStringFromArray
                               params: [['Sales','Engineering','HR','Anonymous']]
