--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G6_impact_of_range_partitioning.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G6_impact_of_range_partitioning.yaml
@@ -31,14 +31,14 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_2015_2020;
             - DROP TABLE IF EXISTS projects_default;
 
-            - create table projects_with_part (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
+            - create table projects_with_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
             - CREATE TABLE projects_2000_2005 PARTITION OF projects_with_part FOR VALUES FROM ('2001-01-01') TO ('2005-12-31');
             - CREATE TABLE projects_2005_2010 PARTITION OF projects_with_part FOR VALUES FROM ('2006-01-01') TO ('2010-12-31');
             - CREATE TABLE projects_2010_2015 PARTITION OF projects_with_part FOR VALUES FROM ('2011-01-01') TO ('2015-12-31');
             - CREATE TABLE projects_2015_2020 PARTITION OF projects_with_part FOR VALUES FROM ('2016-01-01') TO ('2020-12-31');
             - CREATE TABLE projects_default PARTITION OF projects_with_part DEFAULT;
 
-            - create table projects_without_part (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at));
+            - create table projects_without_part (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at));
         cleanup:
             - DROP TABLE IF EXISTS projects_with_part;
             - DROP TABLE IF EXISTS projects_without_part;
@@ -55,9 +55,6 @@ microbenchmark:
                   - name: id
                     util: PrimaryIntGen
                     params: [1, 100000]
-                  - name: uid
-                    util: PrimaryIntGen
-                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -72,9 +69,6 @@ microbenchmark:
               rows: 100000
               columns:
                   - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: name
@@ -113,10 +107,8 @@ microbenchmark:
                   - name: insert_with_part
                     weight: 100
                     queries:
-                        - query: insert into projects_with_part values(?,?,?,?,?);
+                        - query: insert into projects_with_part values(?,?,?,?);
                           bindings:
-                              - util: PrimaryIntGen
-                                params: [100001, 500000]
                               - util: PrimaryIntGen
                                 params: [100001, 500000]
                               - util: RandomAString
@@ -131,10 +123,8 @@ microbenchmark:
                   - name: insert_without_part
                     weight: 100
                     queries:
-                        - query: insert into projects_without_part values(?,?,?,?,?);
+                        - query: insert into projects_without_part values(?,?,?,?);
                           bindings:
-                              - util: PrimaryIntGen
-                                params: [100001, 500000]
                               - util: PrimaryIntGen
                                 params: [100001, 500000]
                               - util: RandomAString
@@ -149,8 +139,10 @@ microbenchmark:
                   - name: update_with_part
                     weight: 100
                     queries:
-                        - query: update projects_with_part set uid=uid+1 where id=?;
+                        - query: update projects_with_part set created_at=? where id=?;
                           bindings:
+                            - util: RandomDateBtwYears
+                              params: [2001,2025]
                             - util: RandomInt
                               params: [1, 100000]
 
@@ -159,8 +151,10 @@ microbenchmark:
                   - name: update_without_part
                     weight: 100
                     queries:
-                        - query: update projects_without_part set uid=uid+1 where id=?;
+                        - query: update projects_without_part set created_at=? where id=?;
                           bindings:
+                            - util: RandomDateBtwYears
+                              params: [2001,2025]
                             - util: RandomInt
                               params: [1, 100000]
 
