--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G7_range_part_fk_parent_part_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G7_range_part_fk_parent_part_parent_operations.yaml
@@ -45,22 +45,22 @@ microbenchmark:
             - DROP INDEX IF EXISTS fk_index1;
             - DROP INDEX IF EXISTS fk_index2;
 
-            - create table projects_with_part_with_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
+            - create table projects_with_part_with_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
             - CREATE TABLE projects_2000_2005_1 PARTITION OF projects_with_part_with_fk FOR VALUES FROM ('2001-01-01') TO ('2005-12-31');
             - CREATE TABLE projects_2005_2010_1 PARTITION OF projects_with_part_with_fk FOR VALUES FROM ('2006-01-01') TO ('2010-12-31');
             - CREATE TABLE projects_2010_2015_1 PARTITION OF projects_with_part_with_fk FOR VALUES FROM ('2011-01-01') TO ('2015-12-31');
             - CREATE TABLE projects_2015_2020_1 PARTITION OF projects_with_part_with_fk FOR VALUES FROM ('2016-01-01') TO ('2020-12-31');
             - CREATE TABLE projects_default_1 PARTITION OF projects_with_part_with_fk DEFAULT;
 
-            - create table projects_with_part_without_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
+            - create table projects_with_part_without_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
             - CREATE TABLE projects_2000_2005_2 PARTITION OF projects_with_part_without_fk FOR VALUES FROM ('2001-01-01') TO ('2005-12-31');
             - CREATE TABLE projects_2005_2010_2 PARTITION OF projects_with_part_without_fk FOR VALUES FROM ('2006-01-01') TO ('2010-12-31');
             - CREATE TABLE projects_2010_2015_2 PARTITION OF projects_with_part_without_fk FOR VALUES FROM ('2011-01-01') TO ('2015-12-31');
             - CREATE TABLE projects_2015_2020_2 PARTITION OF projects_with_part_without_fk FOR VALUES FROM ('2016-01-01') TO ('2020-12-31');
             - CREATE TABLE projects_default_2 PARTITION OF projects_with_part_without_fk DEFAULT;
 
-            - create table projects_without_part_with_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at));
-            - create table projects_without_part_without_fk (id int, uid int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at));
+            - create table projects_without_part_with_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at));
+            - create table projects_without_part_without_fk (id int, name varchar(20) NOT NULL, dept varchar(15), created_at date,PRIMARY KEY (id, created_at));
 
             - create table employees_with_part (id int primary key, name varchar(50) not null, project_id int, project_creation_date date, hired_at date);
             - create table employees_without_part (id int primary key, name varchar(50) not null, project_id int, project_creation_date date, hired_at date);
@@ -98,9 +98,6 @@ microbenchmark:
                   - name: id
                     util: PrimaryIntGen
                     params: [1, 100000]
-                  - name: uid
-                    util: PrimaryIntGen
-                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -115,9 +112,6 @@ microbenchmark:
               rows: 100000
               columns:
                   - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: name
@@ -136,9 +130,6 @@ microbenchmark:
                   - name: id
                     util: PrimaryIntGen
                     params: [1, 100000]
-                  - name: uid
-                    util: PrimaryIntGen
-                    params: [1, 100000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -153,9 +144,6 @@ microbenchmark:
               rows: 100000
               columns:
                   - name: id
-                    util: PrimaryIntGen
-                    params: [1, 100000]
-                  - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: name
@@ -217,8 +205,10 @@ microbenchmark:
                   - name: update_with_part_with_fk
                     weight: 100
                     queries:
-                        - query: update projects_with_part_with_fk set uid=uid+1 where id=?;
+                        - query: update projects_with_part_with_fk set created_at=? where id=?;
                           bindings:
+                            - util: RandomDateBtwYears
+                              params: [2001,2025]
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
@@ -227,8 +217,10 @@ microbenchmark:
                   - name: update_with_part_without_fk
                     weight: 100
                     queries:
-                        - query: update projects_with_part_without_fk set uid=uid+1 where id=?;
+                        - query: update projects_with_part_without_fk set created_at=? where id=?;
                           bindings:
+                            - util: RandomDateBtwYears
+                              params: [2001,2025]
                             - util: PrimaryIntGen
                               params: [1, 100000]
             
@@ -237,8 +229,10 @@ microbenchmark:
                   - name: update_without_part_with_fk
                     weight: 100
                     queries:
-                        - query: update projects_without_part_with_fk set uid=uid+1 where id=?;
+                        - query: update projects_without_part_with_fk set created_at=? where id=?;
                           bindings:
+                            - util: RandomDateBtwYears
+                              params: [2001,2025]
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
@@ -247,8 +241,10 @@ microbenchmark:
                   - name: update_without_part_without_fk
                     weight: 100
                     queries:
-                        - query: update projects_without_part_without_fk set uid=uid+1 where id=?;
+                        - query: update projects_without_part_without_fk set created_at=? where id=?;
                           bindings:
+                            - util: RandomDateBtwYears
+                              params: [2001,2025]
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
